--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetCompletionProvider.js",
   "typings": "",
@@ -14,8 +14,7 @@
     "url": "https://github.com/Microsoft/vscode-emmet-helper"
   },
   "devDependencies": {    
-    "@types/node": "^6.0.46",
-    "vscode": "^1.0.3",
+    "@types/node": "^6.0.46",    
     "typescript": "^2.1.5"    
   },
   "dependencies": {
@@ -24,10 +23,6 @@
   },
   "scripts": {
     "prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install"
-  },
-  "engines": {
-    "vscode": "^1.13.0"
+    "compile": "tsc -watch -p ./"
   }
 }
