--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "author": "Microsoft Corporation",
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@emmetio/expand-abbreviation": "^0.5.8",
-    "@emmetio/extract-abbreviation": "^0.1.1"
+    "@emmetio/extract-abbreviation": "^0.1.1",
+    "vscode-languageserver-types": "^3.0.3"
   },
   "scripts": {
     "prepublish": "tsc -p ./",
