--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "author": "Microsoft Corporation",
@@ -18,7 +18,7 @@
     "mocha": "3.4.2"
   },
   "dependencies": {
-    "@emmetio/expand-abbreviation": "^0.5.8",
+    "vscode-expand-abbreviation": "^0.5.8",
     "@emmetio/extract-abbreviation": "^0.1.1",
     "vscode-languageserver-types": "^3.0.3"
   },
