Tests for applying bem before jsx

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceRoot}/out/emmetHelperTest.js"
+                "${workspaceRoot}/out/test/emmetHelperTest.js"
             ]
         }
     ]
