--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "types": "./out/emmetHelper.d.ts",
@@ -24,7 +24,7 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "scripts": {
-    "prepublish": "npm run compile",
+    "prepublish": "npm run compile && npm run test",
     "compile": "tsc -p ./ && cpy ./src/expand/*.js ./out/expand",
     "test": "mocha out/test"
   }
