--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "vscode-languageserver-types": "^3.0.3"
   },
   "scripts": {
-    "prepublish": "npm run compile && npm run test && npm run rollup",
+    "prepublish": "npm run compile && npm run rollup && npm run test",
     "compile": "tsc -p ./",
     "test": "mocha out/test",
     "rollup": "rollup -c"
