--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.1.25",
+  "version": "1.1.26",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "types": "./out/emmetHelper.d.ts",
@@ -27,7 +27,7 @@
   "scripts": {
     "prepublish": "npm run compile && npm run test",
     "watch": "tsc -watch -p ./",
-    "compile": "tsc -p ./ && cpy ./src/expand/*.js ./out/expand",
+    "compile": "tsc -p ./ && cpy ./src/expand/*.js ./out/expand && cpy ./src/typings/emmetHelper.d.ts ./out/emmetHelper.d.ts",
     "test": "mocha out/test"
   }
 }
