--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.1.33",
+  "version": "1.1.34",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "types": "./out/emmetHelper.d.ts",
@@ -22,7 +22,7 @@
   "dependencies": {
     "@emmetio/extract-abbreviation": "^0.1.4",
     "jsonc-parser": "^1.0.0",
-    "vscode-languageserver-types": "^3.5.0"
+    "vscode-languageserver-types": "^3.6.0-next.1"
   },
   "scripts": {
     "prepublish": "npm run compile && npm run test",
