--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.1.36",
+  "version": "1.1.37",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "types": "./out/emmetHelper.d.ts",
@@ -20,7 +20,7 @@
     "cpy-cli": "^1.0.1"
   },
   "dependencies": {
-    "@emmetio/extract-abbreviation": "^0.1.4",
+    "@emmetio/extract-abbreviation": "0.1.6",
     "jsonc-parser": "^1.0.0",
     "vscode-languageserver-types": "^3.6.0-next.1"
   },
