--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceRoot}/out/test/emmetHelperTest.js"
+                "${workspaceRoot}/out/test/**/*.test.js"
             ],
             "sourceMaps": true,
             "outFiles": [
