--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-emmet-helper",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./out/emmetHelper.js",
   "types": "./out/emmetHelper.d.ts",
@@ -15,9 +15,9 @@
   },
   "devDependencies": {
     "@types/node": "^6.0.46",
-    "typescript": "^2.1.5",
+    "cpy-cli": "^1.0.1",
     "mocha": "3.4.2",
-    "cpy-cli": "^1.0.1"
+    "typescript": "^2.1.5"
   },
   "dependencies": {
     "@emmetio/extract-abbreviation": "0.1.6",
