--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@emmetio/extract-abbreviation": "^0.2.0",
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-types": "^3.15.1",
-    "vscode-uri": "^2.1.2"
+    "vscode-uri": "^2.1.2",
+    "emmet": "^2.1.0"
   },
   "scripts": {
     "prepublishOnly": "npm run clean && npm run compile && npm run compile-esm && npm run test",
