--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "url": "https://github.com/Microsoft/vscode-emmet-helper"
   },
   "devDependencies": {
-    "@types/node": "^6.0.46",
+    "@types/node": "^6.14.8",
     "cpy-cli": "^1.0.1",
     "mocha": "3.4.2",
     "typescript": "^2.1.5"
   },
   "dependencies": {
-    "@emmetio/extract-abbreviation": "0.1.6",
+    "emmet": "^2.0.0-rc.7",
     "jsonc-parser": "^1.0.0",
     "vscode-languageserver-types": "^3.6.0-next.1"
   },
