--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vscode-emmet-helper",
-  "version": "2.0.0",
+  "name": "vscode-emmet-helper2",
+  "version": "2.0.0-next.0",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./lib/cjs/emmetHelper.js",
   "module": "./lib/esm/emmetHelper.js",
