--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "devDependencies": {
     "@types/node": "^12.11.7",
-    "cpy-cli": "^1.0.1",
-    "mocha": "3.4.2",
-    "typescript": "^3.9.6"
+    "cpy-cli": "^3.1.1",
+    "mocha": "^8.1.1",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@emmetio/extract-abbreviation": "^0.2.0",
