--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,19 @@
             "type": "node",
             "request": "launch",
             "name": "Mocha Tests",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "args": [
                 "-u",
                 "tdd",
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceRoot}/lib/cjs/test/**/*.test.js"
+                "${workspaceFolder}/lib/cjs/test/**/*.test.js"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "skipFiles": [
+                "<node_internals>/**/*.js"
             ],
             "sourceMaps": true,
             "outFiles": [
