--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "url": "https://github.com/Microsoft/vscode-emmet-helper"
   },
   "devDependencies": {
+    "@emmetio/abbreviation": "^2.0.0-rc.4",
+    "@emmetio/css-abbreviation": "^2.0.0-rc.4",
     "@types/node": "^12.11.7",
     "cpy-cli": "^3.1.1",
     "mocha": "^8.1.1",
     "rimraf": "^3.0.2",
-    "typescript": "^3.9.7",
-    "@emmetio/abbreviation": "^2.0.0-rc.4",
-    "@emmetio/css-abbreviation": "^2.0.0-rc.4"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@emmetio/extract-abbreviation": "^0.2.0",
+    "emmet": "^2.1.4",
     "jsonc-parser": "^2.3.0",
+    "package": "^1.0.1",
+    "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
-    "vscode-uri": "^2.1.2",
-    "emmet": "^2.1.0"
+    "vscode-uri": "^2.1.2"
   },
   "scripts": {
     "prepublishOnly": "npm run clean && npm run compile && npm run compile-esm && npm run test",
