--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@emmetio/extract-abbreviation": "^0.2.0",
     "jsonc-parser": "^2.3.0",
+    "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
     "vscode-uri": "^2.1.2"
   },
