--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "url": "https://github.com/Microsoft/vscode-emmet-helper"
   },
   "devDependencies": {
+    "@emmetio/abbreviation": "^2.0.2",
+    "@emmetio/css-abbreviation": "^2.1.2",
     "@types/node": "^12.11.7",
     "cpy-cli": "^3.1.1",
     "mocha": "^8.1.1",
