--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
+    "vscode-nls": "^5.0.0",
     "vscode-uri": "^2.1.2"
   },
   "scripts": {
