Migrate to Emmet v2.3.0

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,9 @@
             "name": "Mocha Tests",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "args": [
-                "-u",
-                "tdd",
-                "--timeout",
-                "999999",
-                "--colors",
+                "-u", "tdd",
+                "--timeout", "999999",
+                "--colors", "--recursive",
                 "${workspaceFolder}/lib/cjs/test/**/*.test.js"
             ],
             "console": "integratedTerminal",
