--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "emmet": "^2.3.0",
+    "emmet": "rzhao271/emmet#refs/heads/rzhao271/vscode",
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
