--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,11 @@ on:
   push:
     branches:
       - main
+    tags:
+      - *
   pull_request:
+    branches:
+      - main
 jobs:
   yarn:
     name: yarn-ubuntu
