Add checkout step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ jobs:
     name: yarn-ubuntu
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repository
+        uses: actions/checkout@v2
     - name: Run yarn
       run: |
         yarn && yarn compile && yarn test
@@ -12,6 +14,8 @@ jobs:
     name: yarn-windows
     runs-on: windows-latest
     steps:
+    - name: Check out repository
+        uses: actions/checkout@v2
     - name: Run yarn
       run: |
         yarn && yarn compile && yarn test
