Enable noImplicitAny, fixes #54

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
 		"allowJs": true,
 		"declaration": true,
 		"esModuleInterop": true,
-		"strict": true,
-		"noImplicitAny": false
+		"strict": true
 	},
 	"exclude": ["node_modules", "lib"]
 }
