--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@types/vscode": "^1.73.0",
     "emmet": "^2.3.0",
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
-    "vscode-nls": "^5.0.0",
     "vscode-uri": "^2.1.2"
   },
   "scripts": {
