--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/Microsoft/vscode-emmet-helper"
   },
   "devDependencies": {
+    "@types/vscode": "^1.73.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^14.0.0",
     "mocha": "^9.1.0",
@@ -26,7 +27,6 @@
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
-    "vscode-nls": "^5.0.0",
     "vscode-uri": "^2.1.2"
   },
   "scripts": {
