--- a/package.json
+++ b/package.json
@@ -30,13 +30,10 @@
     "vscode-uri": "^2.1.2"
   },
   "scripts": {
-    "prepublishOnly": "npm run clean && yarn && npm run compile && npm run compile-esm && npm run test",
     "watch": "tsc -watch -p ./",
     "compile": "tsc -p ./",
     "clean": "rimraf lib",
     "compile-esm": "tsc -p ./tsconfig.esm.json",
-    "test": "mocha lib/cjs/test",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags"
+    "test": "mocha lib/cjs/test"
   }
 }
