--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vscode/emmet-helper",
-  "version": "2.9.3",
+  "version": "2.10.0",
   "description": "Helper to use emmet modules in Visual Studio Code",
   "main": "./lib/cjs/emmetHelper.js",
   "module": "./lib/esm/emmetHelper.js",
@@ -16,27 +16,22 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
-    "@types/node": "^16.0.0",
+    "@types/node": "^20.0.0",
     "@types/vscode": "^1.78.0",
     "mocha": "^10.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.0.0"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "emmet": "^2.4.3",
     "jsonc-parser": "^2.3.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-languageserver-types": "^3.15.1",
-    "vscode-uri": "^2.1.2"
+    "vscode-uri": "^3.0.8"
   },
   "scripts": {
-    "prepublishOnly": "npm run clean && yarn && npm run compile && npm run compile-esm && npm run test",
     "watch": "tsc -watch -p ./",
     "compile": "tsc -p ./",
-    "clean": "rimraf lib",
     "compile-esm": "tsc -p ./tsconfig.esm.json",
-    "test": "mocha lib/cjs/test",
-    "preversion": "npm test",
-    "postversion": "git push && git push --tags"
+    "test": "mocha lib/cjs/test"
   }
 }
